Implement product-type CRUD
